RESOLVED FIXED205254
-[WKWebView _detectDataWithTypes:completionHandler:] crashes when there is no running process
https://bugs.webkit.org/show_bug.cgi?id=205254
Summary -[WKWebView _detectDataWithTypes:completionHandler:] crashes when there is no...
Wenson Hsieh
Reported 2019-12-15 16:57:57 PST
This should be safe to call if there is no running web content process. Instead, it currently crashes due to m_process->connection() being null.
Attachments
Patch (3.83 KB, patch)
2019-12-15 17:02 PST, Wenson Hsieh
no flags
Fix GTK/WPE (3.82 KB, patch)
2019-12-15 17:05 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-12-15 17:02:53 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2019-12-15 17:03:47 PST
Speculative fix for <rdar://problem/57463469>, since I'm unable to reproduce it :/
Wenson Hsieh
Comment 3 2019-12-15 17:05:45 PST
Created attachment 385728 [details] Fix GTK/WPE
WebKit Commit Bot
Comment 4 2019-12-15 18:25:49 PST
Comment on attachment 385728 [details] Fix GTK/WPE Clearing flags on attachment: 385728 Committed r253543: <https://trac.webkit.org/changeset/253543>
WebKit Commit Bot
Comment 5 2019-12-15 18:25:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.