-[WKWebView _detectDataWithTypes:completionHandler:] crashes when there is no running process https://bugs.webkit.org/show_bug.cgi?id=205254

Reviewed by Tim Horton.

Source/WebKit:

Bail early and call the completion handler in the case where we don't have a running web process, to avoid a
null `Connection*` deref. Speculative fix for <rdar://problem/57463469>.

* UIProcess/WebPageProxy.cpp:

Tools:

Add a test to verify that we don't crash when calling data detection API's immediately after crashing the web
content process.

* TestWebKitAPI/Tests/WebKitCocoa/DataDetection.mm:


Canonical link: https://commits.webkit.org/218459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253543 268f45cc-cd09-0410-ab3c-d52691b4dbfc